--- a/package.json
+++ b/package.json
@@ -12,9 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
     "ejs": "^3.1.7",
     "express": "^4.18.1",
-    "node-themoviedb": "^0.2.8"
+    "express-session": "^1.17.2",
+    "mongoose": "^6.3.2",
+    "node-fetch": "^3.2.4",
+    "node-themoviedb": "^0.2.8",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
